@@ -1,3 +1,6 @@
+trunk (unreleased)
+* catch low-level I/O errors and return an `Error
+
 0.1.1 (2-Dec-2013)
 * add missing file
 
